fixed collume heights and added overflow scrolling to each collume, fixed header to top

--- a/client/styles/application.scss
+++ b/client/styles/application.scss
@@ -1,10 +1,19 @@
 // This is the top-level scss file. Import all other files in here.
 @import 'home';
 img {
-  max-width: 100%;
+  width: 100%;
 }
 body {
-  background: #C4D7ED
+  background: #C4D7ED;
+  height: 100%;
+}
+
+div[data-reactroot] {
+  height:100%;
+}
+
+html {
+  height: 100%;
 }
 .panel-default>.panel-heading {
   color: black;
@@ -14,9 +23,14 @@ body {
 }
 
 .panel-body {
-  line-height: 0;
+  line-height: 2.5;
+  padding: 0;
   text-align: center;
 
+}
+
+.panel-heading {
+  padding: 5px 15px;
 }
 
 .logo {
@@ -50,7 +64,7 @@ body {
    background-color: transparent;
    background: transparent;
    border-color: transparent;
-   position: relative;
+   position: fixed;
 }
 
 .panel-container {
@@ -92,7 +106,7 @@ body {
 }
 
 .poster {
-  // padding-left: 45px;
+  margin: 0;
 }
 
 .remove {
@@ -115,9 +129,7 @@ body {
 .drop {
   color: black;
   opacity: .5;
-  position: absolute;
-  top: 10px;
-  left: 10px;
+  position: relative;
   transition-duration: 200ms;
 
   &:hover {
@@ -134,6 +146,11 @@ body {
   -ms-filter: "FlipH";
 
   }
+}
+
+.glyphicon-chevron-right {
+  font-side:10pt;
+  top: -15px;
 }
 
 .undo {
@@ -157,7 +174,18 @@ body {
 
   }
 }
+
+.show-grid {
+  height: 100%;
+  padding-top: 75px;
+}
+
+.container {
+  height: 100%;
+}
 .movieContainer {
+  height: 100%;
+  overflow: scroll;
   background: #9DACE2;
   border-bottom: 3px solid transparent;
   border-top-left-radius: 10px;
@@ -167,7 +195,8 @@ body {
 }
 
 .historyContainer {
-  // background: #375D81;
+  height: 100%;
+  overflow: scroll;
   border-bottom: 3px solid transparent;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
@@ -176,6 +205,8 @@ body {
 }
 
 .chatContainer {
+  height: 100%;
+  overflow: scroll;
   background: #9DACE2;
   border-bottom: 3px solid transparent;
   border-top-left-radius: 10px;
